--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css">
 </head>
-<body>
-    <header>
-        
+<body class="open-sans-normal">
+.secondary-bg{
+    <header class="header secondary-bg">
+        <nav>
+            <h3 class="nav-title">Al<span class="text-primary">i</span>a</h3>
+            <ul>
+                <li><a class ="dark-2" href="">Portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn-primary" >Hire Me</button></a></li>
+        </ul>
+        </nav>
+        <!-- hero area -->
+         <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greetings" >Hi! I am</h4>
+                <h1 class="banner-title">Jannatul Alia</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                 <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contac</button> 
+            </div>
+            <!-- <img class="banner-profile-pic" src="images/alia2.jpg" alt=hardy"> -->
+           
+         </div>
+
     </header>
     <main>
-
+        <!-- about me section -->
+         <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+              <!-- .about-item*4>p.item-title+p.item-description -->
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-description">Jannatul Alia</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">jannatulalia0256@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of Birth</p>
+                    <p class="item-description">20july 2006</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Form</p>
+                    <p class="item-description">Chattogram,BD</p>
+                </div>
+            </div>
+         </section>
+         <!-- technologis section -->
+          <!-- <section class="skills">
+            <h3 class="section-title text-content">What I do</h3>
+            <p class="section-description text-content">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+          </section> -->
     </main>
     <footer>
 
