--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
                  <button class="btn-primary">Download CV</button>
             <button class="btn-primary">Contac</button> 
             </div>
-            <!-- <img class="banner-profile-pic" src="images/alia2.jpg" alt=hardy"> -->
+            <img class="banner-profile-pic" src="images/alia2.jpg" alt=alia">
            
          </div>
 
