--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body class="open-sans-normal">
-.secondary-bg{
     <header class="header secondary-bg">
         <nav>
             <h3 class="nav-title">Al<span class="text-primary">i</span>a</h3>
@@ -29,7 +28,7 @@
                  <button class="btn-primary">Download CV</button>
             <button class="btn-primary">Contac</button> 
             </div>
-            <img class="banner-profile-pic" src="images/alia2.jpg" alt=alia">
+            <img class="banner-profile-pic" src="images/alia2.jpg" alt="alia">
            
          </div>
 
